--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,8 +1,8 @@
 name: Build Windows App
 
 on:
-  workflow_dispatch:        # 可以手动点按钮触发
-  push:                     # 每次推 main 分支也会触发
+  workflow_dispatch:        # 手动触发
+  push:                     # 推送到 main 分支时自动触发
     branches: [ main ]
 
 jobs:
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout with LFS
         uses: actions/checkout@v4
         with:
-          lfs: true          # 关键：把 LFS 模型文件也拉下来
+          lfs: true          # 把 LFS 模型文件也拉下来
           fetch-depth: 0
 
       - name: Sanity: list models before build
