--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,62 +1,36 @@
 name: Build Windows App
 
 on:
-  workflow_dispatch:        # 手动触发
-  push:                     # 推送到 main 分支时自动触发
-    branches: [ main ]
+  workflow_dispatch:        # 可以手动点按钮触发
+  push:                     # 推 main 分支时也会触发
+    branches:
+      - main
 
 jobs:
-  build-win:
+  build:
     runs-on: windows-latest
     steps:
-      - name: Checkout with LFS
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          lfs: true          # 把 LFS 模型文件也拉下来
-          fetch-depth: 0
-
-      - name: Sanity: list models before build
-        shell: pwsh
-        run: |
-          if (Test-Path models) {
-            Get-ChildItem -Recurse models | Select-Object FullName,Length
-          } else {
-            Write-Warning "models/ NOT found"
-          }
+          lfs: true          # 确保 Git LFS 文件（模型）也被拉取
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
-      - name: Install deps
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel
           pip install -r requirements.txt
           pip install pyinstaller
 
-      - name: Build (PyInstaller, CPU)
+      - name: Build with PyInstaller
         run: pyinstaller --noconfirm x-anylabeling-win-cpu.spec
 
-      - name: Fallback: copy models into dist
-        shell: pwsh
-        run: |
-          if (Test-Path models) {
-            $app = Get-ChildItem dist -Directory | Select-Object -First 1
-            if ($null -eq $app) { throw "No app dir under dist" }
-            $dst = Join-Path $app.FullName "models"
-            New-Item -ItemType Directory -Force -Path $dst | Out-Null
-            Copy-Item -Recurse -Force models\* $dst\
-            Write-Host "Copied models to $dst"
-          } else {
-            Write-Warning "models/ not found; nothing to copy"
-          }
-
-      - name: Upload zip
-        run: powershell Compress-Archive -Path dist\* -DestinationPath X-AnyLabeling-win.zip
-
-      - name: Artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: X-AnyLabeling-win
-          path: X-AnyLabeling-win.zip
+          path: dist/**
