--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
-          fetch-depth: 0     # 把完整提交历史都拿到，保证 LFS 正常
+          fetch-depth: 0
 
       - name: Sanity check: list models
         shell: pwsh
