--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,8 +1,8 @@
 name: Build Windows App
 
 on:
-  workflow_dispatch:        # 手动触发
-  push:                     # 推送到 main 分支时自动触发
+  workflow_dispatch:
+  push:
     branches:
       - main
 
@@ -10,55 +10,54 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
+      # 1. 拉取代码和 LFS 模型文件
       - name: Checkout repository (with LFS)
         uses: actions/checkout@v4
         with:
           lfs: true
           fetch-depth: 0
 
-      - name: Sanity check: list models
-        shell: pwsh
-        run: |
-          if (Test-Path models) {
-            Write-Host "=== Found models/ directory ==="
-            Get-ChildItem -Recurse models | Select-Object FullName,Length
-          } else {
-            Write-Warning "models/ NOT found!"
-          }
+      # 2. 确认模型文件是否存在
+      - name: List models
+        run: dir models
 
+      # 3. 设置 Python 环境
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
+      # 4. 安装依赖
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel
           pip install -r requirements.txt
           pip install pyinstaller
 
+      # 5. 用 PyInstaller 打包 exe
       - name: Build with PyInstaller
         run: pyinstaller --noconfirm x-anylabeling-win-cpu.spec
 
+      # 6. 把 models 目录复制到 dist 目录
       - name: Copy models into dist
-        shell: pwsh
         run: |
-          if (Test-Path models) {
-            $app = Get-ChildItem dist -Directory | Select-Object -First 1
-            if ($null -eq $app) { throw "No app dir found under dist" }
-            $dst = Join-Path $app.FullName "models"
-            New-Item -ItemType Directory -Force -Path $dst | Out-Null
-            Copy-Item -Recurse -Force models\* $dst\
-            Write-Host "✅ Models copied to $dst"
-          } else {
-            Write-Warning "models/ not found; skipping copy"
-          }
+          if exist models (
+            for /d %%i in (dist\*) do (
+              xcopy models "%%i\models" /E /I /Y
+            )
+          )
 
+      # 7. 压缩成 zip 文件
       - name: Package zip
         run: powershell Compress-Archive -Path dist\* -DestinationPath X-AnyLabeling-win.zip
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      # 8. 上传到 GitHub Release
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
         with:
-          name: X-AnyLabeling-win
-          path: X-AnyLabeling-win.zip
+          tag_name: v${{ github.run_number }}
+          name: "Windows Build #${{ github.run_number }}"
+          body: "自动生成的 Windows 安装包，包含模型文件"
+          files: X-AnyLabeling-win.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
