--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -42,7 +42,7 @@ jobs:
 
       # 第4步：【核心】使用我们全新的、最终的配置文件进行打包
       - name: Build EXE with Final Spec
-        run: pyinstaller --noconfirm build-windows-final.spec
+        run: pyinstaller --noconfirm x-anylabeling-win-cpu.spec
 
       # 第5步：将 models 文件夹复制到打包好的程序旁边
       # 注意：目标文件夹名称 'X-AnyLabeling-Patched' 与 .spec 文件中定义的名字一致
