--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,5 +1,5 @@
 # 文件路径: .github/workflows/build-windows-exe.yml
-# 【最终路径修正版】 - 修正了 bacteria_autoseg.yaml 的实际文件路径
+# 【终极保险版】 - 将 PyInstaller 命令写在单行，彻底避免 PowerShell 换行符解析错误
 
 name: Build X-AnyLabeling for Windows (Complete)
 
@@ -26,23 +26,10 @@ jobs:
           pip install pyinstaller
           pip install -r requirements.txt
           
-      - name: Run PyInstaller (with all resources)
-        run: |
-          pyinstaller --noconfirm --onedir --clean `
-          --windowed `
-          --name "BacteriaLabelingTool" `
-          --icon "anylabeling/resources/images/icon.ico" `
-          --add-data "models;models" `
-          # 【重要修正】: 修正了下面这一行中 bacteria_autoseg.yaml 的源文件路径
-          --add-data "anylabeling/configs/auto_labeling/bacteria_autoseg.yaml;anylabeling/configs/auto_labeling" `
-          --add-data "anylabeling/configs/auto_labeling;anylabeling/configs/auto_labeling" `
-          --add-data "anylabeling/configs;anylabeling/configs" `
-          --add-data "anylabeling/views/labeling/widgets/auto_labeling/auto_labeling.ui;anylabeling/views/labeling/widgets/auto_labeling" `
-          --add-data "anylabeling/services/auto_labeling/configs/bert;anylabeling/services/auto_labeling/configs/bert" `
-          --add-data "anylabeling/services/auto_labeling/configs/clip;anylabeling/services/auto_labeling/configs/clip" `
-          --add-data "anylabeling/services/auto_labeling/configs/ppocr;anylabeling/services/auto_labeling/configs/ppocr" `
-          --add-data "anylabeling/services/auto_labeling/configs/ram;anylabeling/services/auto_labeling/configs/ram" `
-          anylabeling/app.py
+      - name: Run PyInstaller (Single-Line Command)
+        # 【重要修正】: 使用单行命令来确保 PowerShell 不会出错。
+        run: >
+          pyinstaller --noconfirm --onedir --clean --windowed --name "BacteriaLabelingTool" --icon "anylabeling/resources/images/icon.ico" --add-data "models;models" --add-data "anylabeling/configs/auto_labeling/bacteria_autoseg.yaml;anylabeling/configs/auto_labeling" --add-data "anylabeling/configs/auto_labeling;anylabeling/configs/auto_labeling" --add-data "anylabeling/configs;anylabeling/configs" --add-data "anylabeling/views/labeling/widgets/auto_labeling/auto_labeling.ui;anylabeling/views/labeling/widgets/auto_labeling" --add-data "anylabeling/services/auto_labeling/configs/bert;anylabeling/services/auto_labeling/configs/bert" --add-data "anylabeling/services/auto_labeling/configs/clip;anylabeling/services/auto_labeling/configs/clip" --add-data "anylabeling/services/auto_labeling/configs/ppocr;anylabeling/services/auto_labeling/configs/ppocr" --add-data "anylabeling/services/auto_labeling/configs/ram;anylabeling/services/auto_labeling/configs/ram" anylabeling/app.py
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
