--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,7 +1,7 @@
 # 文件路径: .github/workflows/build-windows-exe.yml
-# 【Git LFS 修正版】 - 增加了 LFS 参数来拉取真实的模型大文件
+# 【最终修复·完整版】 - 包含所有修正：Python 3.10, Git LFS, 单行命令, 以及最重要的 VC++ 运行库
 
-name: Build X-AnyLabeling for Windows (Complete)
+name: Build X-AnyLabeling for Windows (Final)
 
 on:
   workflow_dispatch:
@@ -11,29 +11,37 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      # 【重要修正】: 在 checkout 步骤中增加了 lfs: true 和 fetch-depth: 0
+      # 1. 下载代码，并拉取 LFS 大文件
       - name: Checkout repository with LFS
         uses: actions/checkout@v4
         with:
           lfs: true
           fetch-depth: 0
 
+      # 2. 设置与您开发环境一致的 Python 3.10
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
           architecture: 'x64'
 
-      - name: Install dependencies
+      # 3. 【核心修复】安装 ONNX Runtime 所需的系统级依赖库
+      - name: Install Microsoft Visual C++ Redistributable
+        uses: mdaro/install-vcredist@v1
+
+      # 4. 安装所有 Python 依赖
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller
           pip install -r requirements.txt
           
+      # 5. 使用 PyInstaller 打包 (单行命令避免语法错误，--console 用于最后调试)
       - name: Run PyInstaller (Single-Line Command)
         run: >
           pyinstaller --noconfirm --onedir --clean --console --name "BacteriaLabelingTool" --icon "anylabeling/resources/images/icon.ico" --add-data "models;models" --add-data "anylabeling/configs/auto_labeling/bacteria_autoseg.yaml;anylabeling/configs/auto_labeling" --add-data "anylabeling/configs/auto_labeling;anylabeling/configs/auto_labeling" --add-data "anylabeling/configs;anylabeling/configs" --add-data "anylabeling/views/labeling/widgets/auto_labeling/auto_labeling.ui;anylabeling/views/labeling/widgets/auto_labeling" --add-data "anylabeling/services/auto_labeling/configs/bert;anylabeling/services/auto_labeling/configs/bert" --add-data "anylabeling/services/auto_labeling/configs/clip;anylabeling/services/auto_labeling/configs/clip" --add-data "anylabeling/services/auto_labeling/configs/ppocr;anylabeling/services/auto_labeling/configs/ppocr" --add-data "anylabeling/services/auto_labeling/configs/ram;anylabeling/services/auto_labeling/configs/ram" anylabeling/app.py
 
+      # 6. 上传最终产物
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
